# buddy-fox

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Makefile  README.md  UI_IMPLEMENTATION_PLAN.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  README.md  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: query.py  session.py  stats.py
backend/app/models/: schemas.py
backend/app/services/: agent_service.py
examples/: interactive_chat.py  log_analysis.py  research_task.py  simple_search.py  test_features.py  test_logging.py  url_analyzer.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: ChatContainer.tsx  ChatInput.tsx  Message.tsx  MessageList.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx
frontend/src/components/session/: SessionInfo.tsx
frontend/src/components/ui/: theme-toggle.tsx
frontend/src/hooks/: useStreaming.ts  useTheme.ts
frontend/src/lib/: api.ts  types.ts
src/: __init__.py  agent.py  cache.py  config.py  logging_config.py  persistence.py  retry.py  tools.py  utils.py
